--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/lodash": "^4.14.191",
     "@types/node": "^18.11.10",
     "tslib": "^2.4.1"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "ts-node": "^10.9.1"
   }
 }
